--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.5.1",
+    "flexview": "^0.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-flexview": "^6.0.1",
+    "react-scripts": "3.4.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
